--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;600&display=swap');
+
+:root {
+    --primary: #be3144;
+    --secondary: #3a4750;
+    --tertiary: #303841;
+    --background: #d3d6db;
+}
+
+
 img {
     height: 400px;
     width: 400px;
+    border-radius: 96px;
+    padding: 32px;
+}
+
+body {
+    background-color: var(--background);
+    font-family: 'Source Sans Pro', sans-serif;
+    color: var(--tertiary);
+    margin: 0;
+}
+
+.navTitle {
+    color: var(--primary);
+    font-size: 30px;
+    margin: 0;
+}
+
+.navContainer {
+    background-color: var(--secondary);
+    padding: 8px 16px;
 }
