--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     --background: #d3d6db;
 }
 
+#avatar {
+    border-radius: 50%;
+    height: 170px;
+    width: 170px;
+    border: 4px solid var(--primary);
+    padding: 0;
+    margin-top: 32px;
+}
 
 img {
     height: 400px;
@@ -22,6 +30,15 @@ body {
     margin: 0;
 }
 
+h1{
+    color: var(--primary);
+}
+
+.footerContainer {
+    text-align: center;
+    background-color: var(--secondary);
+    padding: 8px 16px;
+}
 .navTitle {
     color: var(--primary);
     font-size: 30px;
@@ -31,4 +48,8 @@ body {
 .navContainer {
     background-color: var(--secondary);
     padding: 8px 16px;
+}
+
+a {
+    color: var(--primary);
 }
